# bdo-amity

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Amity/: CMakeLists.txt  Goal.hpp  Knowledge.hpp  KnowledgeBase.cpp  KnowledgeBase.hpp  main.cpp
bdo-amity/: AmitySolver.cpp
data/: knowledge.json
src/: AmitySolver.cpp  AmitySolver.hpp  CommandLine.cpp  CommandLine.hpp  Knowledge.hpp  KnowledgeBase.cpp  KnowledgeBase.hpp  Npc.hpp  main.cpp
test/: AmitySolverTest.cpp
